--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.data.mongodb.database=jwtmongodb_test
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
 
+# App properties
+app.jwtSecret=mySecretKey
+app.jwtExpirationMs=86400000
